--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,10 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NETLIFY_CACHE = "false"
+
+[build.processing]
+  skip_processing = false
 
 [[redirects]]
   from = "/*"
